--- a/Arcanum.UI/Arcanum.UI.csproj
+++ b/Arcanum.UI/Arcanum.UI.csproj
@@ -341,4 +341,8 @@
         <EmbeddedResource Include="DirectX\Shaders\Compute\BuildHistogram.hlsl"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <EmbeddedResource Include="DirectX\Shaders\Compute\TopTwoColors.hlsl"/>
+    </ItemGroup>
+
 </Project>
