Fixed naming of common

--- a/src/Arcanum.SDK/Arcanum.SDK.csproj
+++ b/src/Arcanum.SDK/Arcanum.SDK.csproj
@@ -12,7 +12,7 @@
         <PackageReference Include="System.Drawing.Common" Version="8.0.0"/>
     </ItemGroup>
     <ItemGroup>
-        <ProjectReference Include="..\Common\Common.csproj"/>
+        <ProjectReference Include="..\Arcanum.Common\Arcanum.Common.csproj"/>
         <ProjectReference Include="..\src_gen\Nexus.Core\Nexus.Core.csproj"/>
     </ItemGroup>
     <ItemGroup>
