Implemented MinMax support in NexusHelper Min Max is not automatically enforced. This has to be done by command creation and Parsing

--- a/src/src_gen/Nexus.Analyzer/Nexus.Analyzer.csproj
+++ b/src/src_gen/Nexus.Analyzer/Nexus.Analyzer.csproj
@@ -16,4 +16,8 @@
         <ProjectReference Include="..\Nexus.Core\Nexus.Core.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <Folder Include="Properties\"/>
+    </ItemGroup>
+
 </Project>
