--- a/src/src_gen/SourceGens/Properties/launchSettings.json
+++ b/src/src_gen/SourceGens/Properties/launchSettings.json
@@ -3,7 +3,7 @@
   "profiles": {
     "Generators": {
       "commandName": "DebugRoslynComponent",
-      "targetProject": "../Arcanum.Core/Arcanum.Core.csproj"
+      "targetProject": "../../Arcanum.Core/Arcanum.Core.csproj"
     }
   }
 }
