--- a/src/src_gen/DiagnosticArgsAnalyzer/DiagnosticArgsAnalyzer.csproj
+++ b/src/src_gen/DiagnosticArgsAnalyzer/DiagnosticArgsAnalyzer.csproj
@@ -12,4 +12,8 @@
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <Folder Include="Properties\"/>
+    </ItemGroup>
+
 </Project>
