--- a/src/Arcanum.Common/Arcanum.Common.csproj
+++ b/src/Arcanum.Common/Arcanum.Common.csproj
@@ -13,4 +13,8 @@
         <Folder Include="UI\NUI\"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.14.0"/>
+    </ItemGroup>
+
 </Project>
