--- a/src/Arcanum.UI/Arcanum.UI.csproj
+++ b/src/Arcanum.UI/Arcanum.UI.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0-windows</TargetFramework>
+        <TargetFramework>net10.0-windows</TargetFramework>
         <Nullable>enable</Nullable>
         <UseWindowsForms>false</UseWindowsForms>
         <ImplicitUsings>enable</ImplicitUsings>
         <OutputType>Library</OutputType>
         <UseWPF>true</UseWPF>
-        <LangVersion>latestmajor</LangVersion>
+        <LangVersion>14</LangVersion>
         <AssemblyName>Arcanum_UI</AssemblyName>
     </PropertyGroup>
 
