--- a/src/Arcanum.Core/Arcanum.Core.csproj
+++ b/src/Arcanum.Core/Arcanum.Core.csproj
@@ -36,6 +36,7 @@
         <PackageReference Include="Octokit" Version="14.0.0"/>
         <PackageReference Include="Pfim" Version="0.11.3"/>
         <PackageReference Include="System.Management" Version="9.0.9"/>
+        <PackageReference Include="Vortice.Mathematics" Version="1.9.2"/>
     </ItemGroup>
 
 </Project>
