--- a/src/Arcanum.UI/Arcanum.UI.csproj
+++ b/src/Arcanum.UI/Arcanum.UI.csproj
@@ -316,6 +316,11 @@
             <XamlRuntime>Wpf</XamlRuntime>
             <SubType>Designer</SubType>
         </Page>
+        <Page Update="Components\UserControls\Map\MapControl.xaml">
+            <Generator>MSBuild:Compile</Generator>
+            <XamlRuntime>Wpf</XamlRuntime>
+            <SubType>Designer</SubType>
+        </Page>
     </ItemGroup>
 
     <ItemGroup>
