Clean up warning during building

--- a/src/src_gen/Nexus.Analyzer/Nexus.Analyzer.csproj
+++ b/src/src_gen/Nexus.Analyzer/Nexus.Analyzer.csproj
@@ -20,4 +20,9 @@
         <Folder Include="Properties\"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <AdditionalFiles Include="AnalyzerReleases.Shipped.md"/>
+        <AdditionalFiles Include="AnalyzerReleases.Unshipped.md"/>
+    </ItemGroup>
+
 </Project>
