--- a/src/src_gen/DiagnosticArgsAnalyzer/DiagnosticArgsAnalyzer.csproj
+++ b/src/src_gen/DiagnosticArgsAnalyzer/DiagnosticArgsAnalyzer.csproj
@@ -16,4 +16,9 @@
         <Folder Include="Properties\"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <AdditionalFiles Include="AnalyzerReleases.Shipped.md"/>
+        <AdditionalFiles Include="AnalyzerReleases.Unshipped.md"/>
+    </ItemGroup>
+
 </Project>
