--- a/src/src_gen/SourceGens/SourceGens.csproj
+++ b/src/src_gen/SourceGens/SourceGens.csproj
@@ -17,4 +17,9 @@
         <Folder Include="Properties\"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <AdditionalFiles Include="AnalyzerReleases.Shipped.md"/>
+        <AdditionalFiles Include="AnalyzerReleases.Unshipped.md"/>
+    </ItemGroup>
+
 </Project>
