--- a/src/Arcanum.App/Arcanum.App.csproj
+++ b/src/Arcanum.App/Arcanum.App.csproj
@@ -8,6 +8,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <UseWPF>true</UseWPF>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <RuntimeIdentifier>win-x64</RuntimeIdentifier>
         <ApplicationIcon>..\Arcanum.UI\Assets\Logo\ArcanumSimplified.ico</ApplicationIcon>
     </PropertyGroup>
 
@@ -18,7 +19,7 @@
         <!-- DISPLAY NAMES: Used for UI and Window Titles -->
         <Product>Arcanum Aer</Product>
         <!-- VERSIONING: The single place to change the number -->
-        <Version>1.0.0</Version>
+        <Version>1.0.1</Version>
     </PropertyGroup>
 
     <ItemGroup>
