--- a/.github/workflows/discord-push-beta.yml
+++ b/.github/workflows/discord-push-beta.yml
@@ -1,5 +1,3 @@
-# .github/workflows/discord-push-beta.yml
-
 name: Discord Beta Push Webhook
 
 on:
@@ -13,24 +11,22 @@ jobs:
     steps:
       - name: Build Commit Message and Count
         id: build_message
+        env:
+          COMMITS_JSON: ${{ toJSON(github.event.commits) }}
         run: |
-          # split("Conflicts:")[0]  -> Takes everything BEFORE the list of conflicts
-          # gsub("#"; "")           -> Removes all '#' characters to prevent Discord headers
-          # sub("\\s+$"; "")        -> Trims the trailing whitespace left behind
-          
-          COMMIT_MESSAGES=$(echo '${{ toJSON(github.event.commits) }}' | jq -r '.[] | 
-            (.message | split("Conflicts:")[0] | gsub("#"; "") | sub("\\s+$"; "")) as $msg | 
-            "`" + .id[0:7] + "` - " + $msg + " - *" + .author.name + "*"'
-          )
-          
-          # Set the message as a multi-line environment variable for the job.
-          # The EOF heredoc syntax correctly preserves the newlines from the jq output.
-          echo "message<<EOF" >> $GITHUB_ENV
-          echo "$COMMIT_MESSAGES" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+          echo "Debug: JSON Payload size: ${#COMMITS_JSON} characters"
 
-          # Calculate the commit count using jq and save it as an environment variable
-          echo "COMMIT_COUNT=$(echo '${{ toJSON(github.event.commits) }}' | jq 'length')" >> $GITHUB_ENV
+          COMMIT_MESSAGES=$(echo "$COMMITS_JSON" | jq -r '.[] | 
+            (.message | split("Conflicts:")[0] | gsub("#"; "") | sub("\\s+$"; "")) as $msg | 
+            "`\(.id[0:7])` - \($msg) - *\(.author.name)*"'
+          )
+          EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
+          echo "message<<$EOF" >> $GITHUB_ENV
+          echo "$COMMIT_MESSAGES" >> $GITHUB_ENV
+          echo "$EOF" >> $GITHUB_ENV
+
+          COUNT=$(echo "$COMMITS_JSON" | jq 'length')
+          echo "COMMIT_COUNT=$COUNT" >> $GITHUB_ENV
 
       - name: Send Discord BETA Webhook
         uses: tsickert/discord-webhook@v5.3.0
@@ -40,7 +36,6 @@ jobs:
           embed-description: "${{ env.message }}"
           embed-url: "${{ github.event.compare }}"
           embed-color: "3447003"
-          # Safe fallback if timestamp is missing
           embed-timestamp: "${{ github.event.head_commit.timestamp || github.event.repository.updated_at }}"
           embed-author-name: "${{ github.event.sender.login }}"
           embed-author-url: "${{ github.event.sender.html_url }}"
