--- a/src/Arcanum.Core/Arcanum.Core.csproj
+++ b/src/Arcanum.Core/Arcanum.Core.csproj
@@ -20,6 +20,7 @@
         <Folder Include="CoreSystems\Parsing\MapParsing\Smoothing\"/>
         <Folder Include="GameObjects\InGame\"/>
         <Folder Include="GlobalStates\BackingClasses\ErrorDescriptorSettings\"/>
+        <Folder Include="MapEditor\"/>
         <Folder Include="Utils\SearchingAlgorithms\"/>
     </ItemGroup>
 
